oscbnParser.cpp

// Generated from oscbn.g4 by ANTLR 4.9.3


#include "oscbnVisitor.h"

#include "oscbnParser.h"


using namespace antlrcpp;
using namespace oscbn;
using namespace antlr4;

oscbnParser::oscbnParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

oscbnParser::~oscbnParser() {
  delete _interpreter;
}

std::string oscbnParser::getGrammarFileName() const {
  return "oscbn.g4";
}

const std::vector<std::string>& oscbnParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& oscbnParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- OscContext ------------------------------------------------------------------

oscbnParser::OscContext::OscContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oscbnParser::OscBundleContext* oscbnParser::OscContext::oscBundle() {
  return getRuleContext<oscbnParser::OscBundleContext>(0);
}

oscbnParser::OscMessageContext* oscbnParser::OscContext::oscMessage() {
  return getRuleContext<oscbnParser::OscMessageContext>(0);
}

oscbnParser::OscUnclosedBundleContext* oscbnParser::OscContext::oscUnclosedBundle() {
  return getRuleContext<oscbnParser::OscUnclosedBundleContext>(0);
}


size_t oscbnParser::OscContext::getRuleIndex() const {
  return oscbnParser::RuleOsc;
}


antlrcpp::Any oscbnParser::OscContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscbnVisitor*>(visitor))
    return parserVisitor->visitOsc(this);
  else
    return visitor->visitChildren(this);
}

oscbnParser::OscContext* oscbnParser::osc() {
  OscContext *_localctx = _tracker.createInstance<OscContext>(_ctx, getState());
  enterRule(_localctx, 0, oscbnParser::RuleOsc);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(17);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(14);
      oscBundle();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(15);
      oscMessage();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(16);
      oscUnclosedBundle();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OscBundleContext ------------------------------------------------------------------

oscbnParser::OscBundleContext::OscBundleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t oscbnParser::OscBundleContext::getRuleIndex() const {
  return oscbnParser::RuleOscBundle;
}

void oscbnParser::OscBundleContext::copyFrom(OscBundleContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- EmptyBundleContext ------------------------------------------------------------------

tree::TerminalNode* oscbnParser::EmptyBundleContext::LBRACE() {
  return getToken(oscbnParser::LBRACE, 0);
}

tree::TerminalNode* oscbnParser::EmptyBundleContext::RBRACE() {
  return getToken(oscbnParser::RBRACE, 0);
}

oscbnParser::EmptyBundleContext::EmptyBundleContext(OscBundleContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscbnParser::EmptyBundleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscbnVisitor*>(visitor))
    return parserVisitor->visitEmptyBundle(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NonEmptyBundleContext ------------------------------------------------------------------

tree::TerminalNode* oscbnParser::NonEmptyBundleContext::LBRACE() {
  return getToken(oscbnParser::LBRACE, 0);
}

tree::TerminalNode* oscbnParser::NonEmptyBundleContext::RBRACE() {
  return getToken(oscbnParser::RBRACE, 0);
}

std::vector<oscbnParser::OscBundleElemContext *> oscbnParser::NonEmptyBundleContext::oscBundleElem() {
  return getRuleContexts<oscbnParser::OscBundleElemContext>();
}

oscbnParser::OscBundleElemContext* oscbnParser::NonEmptyBundleContext::oscBundleElem(size_t i) {
  return getRuleContext<oscbnParser::OscBundleElemContext>(i);
}

std::vector<tree::TerminalNode *> oscbnParser::NonEmptyBundleContext::SEQSEP() {
  return getTokens(oscbnParser::SEQSEP);
}

tree::TerminalNode* oscbnParser::NonEmptyBundleContext::SEQSEP(size_t i) {
  return getToken(oscbnParser::SEQSEP, i);
}

oscbnParser::NonEmptyBundleContext::NonEmptyBundleContext(OscBundleContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscbnParser::NonEmptyBundleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscbnVisitor*>(visitor))
    return parserVisitor->visitNonEmptyBundle(this);
  else
    return visitor->visitChildren(this);
}
oscbnParser::OscBundleContext* oscbnParser::oscBundle() {
  OscBundleContext *_localctx = _tracker.createInstance<OscBundleContext>(_ctx, getState());
  enterRule(_localctx, 2, oscbnParser::RuleOscBundle);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(32);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<oscbnParser::EmptyBundleContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(19);
      match(oscbnParser::LBRACE);
      setState(20);
      match(oscbnParser::RBRACE);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<oscbnParser::NonEmptyBundleContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(21);
      match(oscbnParser::LBRACE);
      setState(22);
      antlrcpp::downCast<NonEmptyBundleContext *>(_localctx)->first = oscBundleElem();
      setState(27);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == oscbnParser::SEQSEP) {
        setState(23);
        match(oscbnParser::SEQSEP);
        setState(24);
        antlrcpp::downCast<NonEmptyBundleContext *>(_localctx)->rest = oscBundleElem();
        setState(29);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(30);
      match(oscbnParser::RBRACE);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OscUnclosedBundleContext ------------------------------------------------------------------

oscbnParser::OscUnclosedBundleContext::OscUnclosedBundleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t oscbnParser::OscUnclosedBundleContext::getRuleIndex() const {
  return oscbnParser::RuleOscUnclosedBundle;
}

void oscbnParser::OscUnclosedBundleContext::copyFrom(OscUnclosedBundleContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnclosedEmptyBundleContext ------------------------------------------------------------------

tree::TerminalNode* oscbnParser::UnclosedEmptyBundleContext::LBRACE() {
  return getToken(oscbnParser::LBRACE, 0);
}

oscbnParser::UnclosedEmptyBundleContext::UnclosedEmptyBundleContext(OscUnclosedBundleContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscbnParser::UnclosedEmptyBundleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscbnVisitor*>(visitor))
    return parserVisitor->visitUnclosedEmptyBundle(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnclosedNonEmptyBundleContext ------------------------------------------------------------------

tree::TerminalNode* oscbnParser::UnclosedNonEmptyBundleContext::LBRACE() {
  return getToken(oscbnParser::LBRACE, 0);
}

std::vector<oscbnParser::OscBundleElemContext *> oscbnParser::UnclosedNonEmptyBundleContext::oscBundleElem() {
  return getRuleContexts<oscbnParser::OscBundleElemContext>();
}

oscbnParser::OscBundleElemContext* oscbnParser::UnclosedNonEmptyBundleContext::oscBundleElem(size_t i) {
  return getRuleContext<oscbnParser::OscBundleElemContext>(i);
}

std::vector<tree::TerminalNode *> oscbnParser::UnclosedNonEmptyBundleContext::SEQSEP() {
  return getTokens(oscbnParser::SEQSEP);
}

tree::TerminalNode* oscbnParser::UnclosedNonEmptyBundleContext::SEQSEP(size_t i) {
  return getToken(oscbnParser::SEQSEP, i);
}

oscbnParser::UnclosedNonEmptyBundleContext::UnclosedNonEmptyBundleContext(OscUnclosedBundleContext *ctx) { copyFrom(ctx); }


antlrcpp::Any oscbnParser::UnclosedNonEmptyBundleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscbnVisitor*>(visitor))
    return parserVisitor->visitUnclosedNonEmptyBundle(this);
  else
    return visitor->visitChildren(this);
}
oscbnParser::OscUnclosedBundleContext* oscbnParser::oscUnclosedBundle() {
  OscUnclosedBundleContext *_localctx = _tracker.createInstance<OscUnclosedBundleContext>(_ctx, getState());
  enterRule(_localctx, 4, oscbnParser::RuleOscUnclosedBundle);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(44);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<oscbnParser::UnclosedEmptyBundleContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(34);
      match(oscbnParser::LBRACE);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<oscbnParser::UnclosedNonEmptyBundleContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(35);
      match(oscbnParser::LBRACE);
      setState(36);
      antlrcpp::downCast<UnclosedNonEmptyBundleContext *>(_localctx)->first = oscBundleElem();
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == oscbnParser::SEQSEP) {
        setState(37);
        match(oscbnParser::SEQSEP);
        setState(38);
        antlrcpp::downCast<UnclosedNonEmptyBundleContext *>(_localctx)->rest = oscBundleElem();
        setState(43);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OscBundleElemContext ------------------------------------------------------------------

oscbnParser::OscBundleElemContext::OscBundleElemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

oscbnParser::OscBundleContext* oscbnParser::OscBundleElemContext::oscBundle() {
  return getRuleContext<oscbnParser::OscBundleContext>(0);
}

oscbnParser::OscMessageContext* oscbnParser::OscBundleElemContext::oscMessage() {
  return getRuleContext<oscbnParser::OscMessageContext>(0);
}


size_t oscbnParser::OscBundleElemContext::getRuleIndex() const {
  return oscbnParser::RuleOscBundleElem;
}


antlrcpp::Any oscbnParser::OscBundleElemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscbnVisitor*>(visitor))
    return parserVisitor->visitOscBundleElem(this);
  else
    return visitor->visitChildren(this);
}

oscbnParser::OscBundleElemContext* oscbnParser::oscBundleElem() {
  OscBundleElemContext *_localctx = _tracker.createInstance<OscBundleElemContext>(_ctx, getState());
  enterRule(_localctx, 6, oscbnParser::RuleOscBundleElem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(48);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(46);
      oscBundle();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(47);
      oscMessage();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OscMessageContext ------------------------------------------------------------------

oscbnParser::OscMessageContext::OscMessageContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* oscbnParser::OscMessageContext::OSCADDRESS() {
  return getToken(oscbnParser::OSCADDRESS, 0);
}

tree::TerminalNode* oscbnParser::OscMessageContext::BIND() {
  return getToken(oscbnParser::BIND, 0);
}

oscbnParser::OscMessageItemsContext* oscbnParser::OscMessageContext::oscMessageItems() {
  return getRuleContext<oscbnParser::OscMessageItemsContext>(0);
}

tree::TerminalNode* oscbnParser::OscMessageContext::OSCPATTERN() {
  return getToken(oscbnParser::OSCPATTERN, 0);
}


size_t oscbnParser::OscMessageContext::getRuleIndex() const {
  return oscbnParser::RuleOscMessage;
}


antlrcpp::Any oscbnParser::OscMessageContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscbnVisitor*>(visitor))
    return parserVisitor->visitOscMessage(this);
  else
    return visitor->visitChildren(this);
}

oscbnParser::OscMessageContext* oscbnParser::oscMessage() {
  OscMessageContext *_localctx = _tracker.createInstance<OscMessageContext>(_ctx, getState());
  enterRule(_localctx, 8, oscbnParser::RuleOscMessage);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(50);
      match(oscbnParser::OSCADDRESS);
      setState(52);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == oscbnParser::BIND) {
        setState(51);
        match(oscbnParser::BIND);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(55);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == oscbnParser::OSCADDRESS) {
        setState(54);
        match(oscbnParser::OSCADDRESS);
      }
      setState(57);
      match(oscbnParser::BIND);
      setState(58);
      oscMessageItems();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(59);
      match(oscbnParser::OSCPATTERN);
      setState(61);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == oscbnParser::BIND) {
        setState(60);
        match(oscbnParser::BIND);
      }
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(64);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == oscbnParser::OSCPATTERN) {
        setState(63);
        match(oscbnParser::OSCPATTERN);
      }
      setState(66);
      match(oscbnParser::BIND);
      setState(67);
      oscMessageItems();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(68);
      oscMessageItems();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OscMessageItemsContext ------------------------------------------------------------------

oscbnParser::OscMessageItemsContext::OscMessageItemsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<oscbnParser::OscMessageItemContext *> oscbnParser::OscMessageItemsContext::oscMessageItem() {
  return getRuleContexts<oscbnParser::OscMessageItemContext>();
}

oscbnParser::OscMessageItemContext* oscbnParser::OscMessageItemsContext::oscMessageItem(size_t i) {
  return getRuleContext<oscbnParser::OscMessageItemContext>(i);
}

tree::TerminalNode* oscbnParser::OscMessageItemsContext::LBRACKET() {
  return getToken(oscbnParser::LBRACKET, 0);
}

tree::TerminalNode* oscbnParser::OscMessageItemsContext::RBRACKET() {
  return getToken(oscbnParser::RBRACKET, 0);
}

std::vector<tree::TerminalNode *> oscbnParser::OscMessageItemsContext::SEQSEP() {
  return getTokens(oscbnParser::SEQSEP);
}

tree::TerminalNode* oscbnParser::OscMessageItemsContext::SEQSEP(size_t i) {
  return getToken(oscbnParser::SEQSEP, i);
}


size_t oscbnParser::OscMessageItemsContext::getRuleIndex() const {
  return oscbnParser::RuleOscMessageItems;
}


antlrcpp::Any oscbnParser::OscMessageItemsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscbnVisitor*>(visitor))
    return parserVisitor->visitOscMessageItems(this);
  else
    return visitor->visitChildren(this);
}

oscbnParser::OscMessageItemsContext* oscbnParser::oscMessageItems() {
  OscMessageItemsContext *_localctx = _tracker.createInstance<OscMessageItemsContext>(_ctx, getState());
  enterRule(_localctx, 10, oscbnParser::RuleOscMessageItems);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case oscbnParser::INT32:
      case oscbnParser::FLOAT:
      case oscbnParser::STRING:
      case oscbnParser::BLOB:
      case oscbnParser::LBRACE: {
        enterOuterAlt(_localctx, 1);
        setState(71);
        oscMessageItem();
        break;
      }

      case oscbnParser::LBRACKET: {
        enterOuterAlt(_localctx, 2);
        setState(72);
        match(oscbnParser::LBRACKET);
        setState(74);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << oscbnParser::INT32)
          | (1ULL << oscbnParser::FLOAT)
          | (1ULL << oscbnParser::STRING)
          | (1ULL << oscbnParser::BLOB)
          | (1ULL << oscbnParser::LBRACE))) != 0)) {
          setState(73);
          antlrcpp::downCast<OscMessageItemsContext *>(_localctx)->first = oscMessageItem();
        }
        setState(80);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == oscbnParser::SEQSEP) {
          setState(76);
          match(oscbnParser::SEQSEP);
          setState(77);
          antlrcpp::downCast<OscMessageItemsContext *>(_localctx)->rest = oscMessageItem();
          setState(82);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(83);
        match(oscbnParser::RBRACKET);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OscMessageItemContext ------------------------------------------------------------------

oscbnParser::OscMessageItemContext::OscMessageItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* oscbnParser::OscMessageItemContext::INT32() {
  return getToken(oscbnParser::INT32, 0);
}

tree::TerminalNode* oscbnParser::OscMessageItemContext::FLOAT() {
  return getToken(oscbnParser::FLOAT, 0);
}

tree::TerminalNode* oscbnParser::OscMessageItemContext::STRING() {
  return getToken(oscbnParser::STRING, 0);
}

tree::TerminalNode* oscbnParser::OscMessageItemContext::BLOB() {
  return getToken(oscbnParser::BLOB, 0);
}

oscbnParser::OscBundleContext* oscbnParser::OscMessageItemContext::oscBundle() {
  return getRuleContext<oscbnParser::OscBundleContext>(0);
}


size_t oscbnParser::OscMessageItemContext::getRuleIndex() const {
  return oscbnParser::RuleOscMessageItem;
}


antlrcpp::Any oscbnParser::OscMessageItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<oscbnVisitor*>(visitor))
    return parserVisitor->visitOscMessageItem(this);
  else
    return visitor->visitChildren(this);
}

oscbnParser::OscMessageItemContext* oscbnParser::oscMessageItem() {
  OscMessageItemContext *_localctx = _tracker.createInstance<OscMessageItemContext>(_ctx, getState());
  enterRule(_localctx, 12, oscbnParser::RuleOscMessageItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case oscbnParser::INT32: {
        enterOuterAlt(_localctx, 1);
        setState(86);
        match(oscbnParser::INT32);
        break;
      }

      case oscbnParser::FLOAT: {
        enterOuterAlt(_localctx, 2);
        setState(87);
        match(oscbnParser::FLOAT);
        break;
      }

      case oscbnParser::STRING: {
        enterOuterAlt(_localctx, 3);
        setState(88);
        match(oscbnParser::STRING);
        break;
      }

      case oscbnParser::BLOB: {
        enterOuterAlt(_localctx, 4);
        setState(89);
        match(oscbnParser::BLOB);
        break;
      }

      case oscbnParser::LBRACE: {
        enterOuterAlt(_localctx, 5);
        setState(90);
        oscBundle();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

// Static vars and initialization.
std::vector<dfa::DFA> oscbnParser::_decisionToDFA;
atn::PredictionContextCache oscbnParser::_sharedContextCache;

// We own the ATN which in turn owns the ATN states.
atn::ATN oscbnParser::_atn;
std::vector<uint16_t> oscbnParser::_serializedATN;

std::vector<std::string> oscbnParser::_ruleNames = {
  "osc", "oscBundle", "oscUnclosedBundle", "oscBundleElem", "oscMessage", 
  "oscMessageItems", "oscMessageItem"
};

std::vector<std::string> oscbnParser::_literalNames = {
  "", "", "", "", "", "", "", "", "':'", "'['", "']'", "'{'", "'}'", "','"
};

std::vector<std::string> oscbnParser::_symbolicNames = {
  "", "OSCPATTERN", "OSCADDRESS", "INT32", "FLOAT", "DigitSequence", "STRING", 
  "BLOB", "BIND", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "SEQSEP", 
  "COMMENT", "WHITESPACE"
};

dfa::Vocabulary oscbnParser::_vocabulary(_literalNames, _symbolicNames);

std::vector<std::string> oscbnParser::_tokenNames;

oscbnParser::Initializer::Initializer() {
	for (size_t i = 0; i < _symbolicNames.size(); ++i) {
		std::string name = _vocabulary.getLiteralName(i);
		if (name.empty()) {
			name = _vocabulary.getSymbolicName(i);
		}

		if (name.empty()) {
			_tokenNames.push_back("<INVALID>");
		} else {
      _tokenNames.push_back(name);
    }
	}


  _serializedATN.insert(_serializedATN.end(), serializedATNSegment0,
    serializedATNSegment0 + sizeof(serializedATNSegment0) / sizeof(serializedATNSegment0[0]));


  atn::ATNDeserializer deserializer;
  _atn = deserializer.deserialize(_serializedATN);

  size_t count = _atn.getNumberOfDecisions();
  _decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    _decisionToDFA.emplace_back(_atn.getDecisionState(i), i);
  }
}

oscbnParser::Initializer oscbnParser::_init;
